bynkc/tests/fixtures/negative/292_match_literal_non_exhaustive/input.bynk
commons demo {
  fn f(x: Int) -> Int {
    match x {
      1 => 10
      2 => 20
    }
  }
}
